add app name and update layout link target

--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -31,7 +31,7 @@
 
     <div class="footer">
       <div class="container">
-        <p class="text-muted">made with ♥ by <a target="_blank" href="http://www.minchee.org/">Minchee</a> at Macau<span class="pull-right">written in <a href="http://golang.org/">Go</a>, hosted on <a href="https://cloud.google.com/products/app-engine">Google</a>, source code on Github</p></span>
+        <p class="text-muted">made with ♥ by <a target="_blank" href="http://www.minchee.org/">Minchee</a> at Macau<span class="pull-right">written in <a target="_blank" href="http://golang.org/">Go</a>, hosted on <a target="_blank" href="https://cloud.google.com/products/app-engine">Google</a>, source code on <a target="_blank" href="https://github.com/MincheeLab/ThreeDeeNameTagWeb">Github</a></p></span>
       </div>
     </div>
 
