update template and new field

--- a/templates/nametags/new.tmpl
+++ b/templates/nametags/new.tmpl
@@ -4,6 +4,10 @@
     <input type="email" class="form-control" name="email" id="email" placeholder="Enter email">
   </div>
   <div class="form-group">
+    <label for="phone">Phone Number</label>
+    <input type="text" class="form-control" name="phone" id="phone" placeholder="Enter phone">
+  </div>
+  <div class="form-group">
     <label for="nametag_content">Name</label>
     <input type="text" class="form-control" name="nametag_content" id="nametag_content" placeholder="Enter nametag content">
   </div>
