--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>3D打印名牌查詢 (3D printed nametag enquiry)</title>
+    <title>3D名字鑰匙扣查詢 (3D Print keychain enquiry)</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/main.css">
   </head>
@@ -14,7 +14,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Minchee - 3D打印名牌查詢</a>
+          <a class="navbar-brand" href="/">Minchee - 3D名字鑰匙扣查詢</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
