--- a/templates/nametags/list.tmpl
+++ b/templates/nametags/list.tmpl
@@ -4,6 +4,7 @@
         <tr>
             <th>Email</th>
             <th>Name tag content</th>
+            <th>Status</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -12,6 +13,7 @@
             <tr>
                 <td><a href="/nametags/{{ .Id }}">{{ .Email }}</a></td>
                 <td><a href="/nametags/{{ .Id }}">{{ .Content }}</a></td>
+                <th><a href="/nametags/{{ .Id }}">{{ .Status }}</a></th>
                 <td><div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                     Actions
