--- a/templates/pickup_location.tmpl
+++ b/templates/pickup_location.tmpl
@@ -8,7 +8,9 @@
   <strong>聖若瑟大學</strong><br>
   澳門外港新填海區<br>
   倫敦街十六號，三樓<br>
+  電腦部<br>
 
-  <abbr title="電話">電話:</abbr> 1243452345
 </address>
 
+<h3>辦公室地點：</h3>
+<img src="/images/itoffice_location.gif" alt="辦公室地點">
