--- a/templates/nametags/show_public.tmpl
+++ b/templates/nametags/show_public.tmpl
@@ -26,7 +26,7 @@
 <h1>成品</h1>
 <hr>
 {{ range .Images }}
-    <img width="300px" class="img-rounded" src="/serve?blobKey={{.BlobKey}}" alt="">
+    <img width="300px" class="img-rounded" src="{{ .ServingURL }}" alt="">
 {{ end }}
 
 <h1>同一電郵登記的名字鑰匙扣</h1>
