--- a/templates/nametags/list.tmpl
+++ b/templates/nametags/list.tmpl
@@ -12,10 +12,18 @@
     </thead>
     <tbody>
         {{range .}}
-            <tr>
+            <tr class="
+                {{ if .IsPending }}warning{{ end }}
+                {{ if .IsPrinted }}success{{ end }}
+                {{ if .IsNotified }}info{{ end }}
+                {{ if .IsStatusEmpty }}danger{{ end }}
+                ">
                 <td><a href="/nametags/{{ .Id }}">{{ .Email }}</a></td>
                 <td><a href="/nametags/{{ .Id }}">{{ .Content }}</a></td>
-                <th><a href="/nametags/{{ .Id }}">{{ .Status }}</a></th>
+                <th><span class="label label-{{ if .IsPending }}warning{{ end }}
+                {{ if .IsPrinted }}success{{ end }}
+                {{ if .IsNotified }}info{{ end }}
+                {{ if .IsStatusEmpty }}danger{{ end }}">{{ .Status }}</span></th>
                 <td><div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
                     Actions
